# chess-game

./: README.md  board.py  main.py  player.py  pyproject.toml
pieces/: bishop.py  invi.py  king.py  knight.py  pawn.py  piece.py  queen.py  rook.py
