[tool.poetry]
name = "chess-game"
version = "0.1.0"
description = ""
authors = ["Gustavo Miranda <56138255+gustavocmiranda@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
